<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/background"
    android:paddingStart="24dp"
    android:paddingEnd="24dp"
    android:paddingTop="24dp"
    android:paddingBottom="128dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_over"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/primary"
        android:layout_marginBottom="32dp"/>

    <TextView
        android:id="@+id/tvResultInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/text_primary"
        android:layout_marginBottom="24dp"
        android:text="@string/loading_results"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="48dp">

        <TextView
            android:id="@+id/tvStarsWon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/warning"
            android:drawableStart="@drawable/ic_star"
            android:drawablePadding="8dp"
            android:layout_marginEnd="24dp"
            android:text="@string/plus_zero"/>

        <TextView
            android:id="@+id/tvTokensWon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/warning"
            android:drawableStart="@drawable/ic_token"
            android:drawablePadding="8dp"
            android:text="@string/plus_zero"/>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/return_to_home"
        android:textColor="@color/background"
        android:textSize="10sp"
        android:letterSpacing="0.1"
        android:backgroundTint="@color/primary"/>

</LinearLayout>
